<resources>
    <string name="app_name">FTX Price Notification</string>
    <string name="action_settings">Settings</string>
    <!-- Strings for buttons -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Strings for the creation/edit menu -->
    <string name="creationTitle">Add New Ticker</string>
    <string name="editTitle">Edit Ticker Entry</string>
    <string name="required">(required)</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="clearPosition">Clear Position Data</string>

    <string name="ticker">Ticker</string>
    <string name="size">Position size</string>
    <string name="entry">Entry price</string>
    <string name="hoisted">High priority</string>

    <!-- Strings for position sync activity -->
    <string name="syncTitle">Sync FTX Positions</string>
    <string name="apiKey">API Key</string>
    <string name="apiSecret">API Secret</string>
    <string name="syncReloadBtn">Save &amp; Reload Positions</string>

</resources>