<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTickerActivity">

    <TextView
        android:id="@+id/creationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/creationTitle"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticker"
        app:layout_constraintBottom_toBottomOf="@+id/tickerTextBox"
        app:layout_constraintEnd_toStartOf="@+id/tickerTextBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tickerTextBox" />

    <EditText
        android:id="@+id/tickerTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/required"
        android:inputType="none|textCapCharacters"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tickerTextView"
        app:layout_constraintTop_toBottomOf="@+id/creationTitleTextView" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintBottom_toBottomOf="@+id/sizeTextBox"
        app:layout_constraintEnd_toEndOf="@+id/tickerTextView"
        app:layout_constraintStart_toStartOf="@+id/tickerTextView"
        app:layout_constraintTop_toTopOf="@+id/sizeTextBox" />

    <EditText
        android:id="@+id/sizeTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/tickerTextBox"
        app:layout_constraintStart_toStartOf="@+id/tickerTextBox"
        app:layout_constraintTop_toBottomOf="@+id/tickerTextBox" />

    <TextView
        android:id="@+id/entryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry"
        app:layout_constraintBottom_toBottomOf="@+id/entryTextBox"
        app:layout_constraintEnd_toEndOf="@+id/sizeTextView"
        app:layout_constraintStart_toStartOf="@+id/sizeTextView"
        app:layout_constraintTop_toTopOf="@+id/entryTextBox" />

    <EditText
        android:id="@+id/entryTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/sizeTextBox"
        app:layout_constraintStart_toStartOf="@+id/sizeTextBox"
        app:layout_constraintTop_toBottomOf="@+id/sizeTextBox" />

</androidx.constraintlayout.widget.ConstraintLayout>