<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTickerActivity">

    <TextView
        android:id="@+id/creationTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/editTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticker"
        app:layout_constraintBottom_toBottomOf="@+id/editTickerTextBox"
        app:layout_constraintEnd_toStartOf="@+id/editTickerTextBox"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTickerTextBox" />

    <EditText
        android:id="@+id/editTickerTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="none"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tickerTextView"
        app:layout_constraintTop_toBottomOf="@+id/creationTitleTextView" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        app:layout_constraintBottom_toBottomOf="@+id/editSizeTextBox"
        app:layout_constraintEnd_toEndOf="@+id/tickerTextView"
        app:layout_constraintStart_toStartOf="@+id/tickerTextView"
        app:layout_constraintTop_toTopOf="@+id/editSizeTextBox" />

    <EditText
        android:id="@+id/editSizeTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTickerTextBox"
        app:layout_constraintStart_toStartOf="@+id/editTickerTextBox"
        app:layout_constraintTop_toBottomOf="@+id/editTickerTextBox" />

    <TextView
        android:id="@+id/entryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry"
        app:layout_constraintBottom_toBottomOf="@+id/editEntryTextBox"
        app:layout_constraintEnd_toEndOf="@+id/sizeTextView"
        app:layout_constraintStart_toStartOf="@+id/sizeTextView"
        app:layout_constraintTop_toTopOf="@+id/editEntryTextBox" />

    <EditText
        android:id="@+id/editEntryTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editSizeTextBox"
        app:layout_constraintStart_toStartOf="@+id/editSizeTextBox"
        app:layout_constraintTop_toBottomOf="@+id/editSizeTextBox" />

    <TextView
        android:id="@+id/hoistedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hoisted"
        app:layout_constraintBottom_toBottomOf="@+id/editHoistedSwitch"
        app:layout_constraintEnd_toEndOf="@+id/entryTextView"
        app:layout_constraintStart_toStartOf="@+id/entryTextView"
        app:layout_constraintTop_toTopOf="@+id/editHoistedSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/editHoistedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="@+id/editEntryTextBox"
        app:layout_constraintTop_toBottomOf="@+id/editEntryTextBox" />

    <Button
        android:id="@+id/editNewTickerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/done"
        android:backgroundTint="@color/project_accent"
        android:minWidth="300dp"
        android:minHeight="60dp"
        android:onClick="editTicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHoistedSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>